--- a/src/main/resources/messages/app_ru.properties
+++ b/src/main/resources/messages/app_ru.properties
@@ -1,11 +1,11 @@
-app.title=??? ?? ?????????
-app.home=???????
-app.login=????? ???
-user.title=????????????
-user.name=???
-user.email=?????
-user.roles=????
-user.active=????????
-user.registered=???????????????
-common.select=???????
-restaurant.title=?????????
+app.title=\u0413\u0434\u0435 \u043F\u043E\u043E\u0431\u0435\u0434\u0430\u0442\u044C
+app.home=\u0413\u043B\u0430\u0432\u043D\u0430\u044F
+app.login=\u0417\u0430\u0439\u0442\u0438 \u043A\u0430\u043A
+user.title=\u041F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u0438
+user.name=\u0418\u043C\u044F
+user.email=\u041F\u043E\u0447\u0442\u0430
+user.roles=\u0420\u043E\u043B\u0438
+user.active=\u0410\u043A\u0442\u0438\u0432\u043D\u044B\u0439
+user.registered=\u0417\u0430\u0440\u0435\u0433\u0438\u0441\u0442\u0440\u0438\u0440\u043E\u0432\u0430\u043D
+common.select=\u0412\u044B\u0431\u0440\u0430\u0442\u044C
+restaurant.title=\u0420\u0435\u0441\u0442\u043E\u0440\u0430\u043D\u044B
