Transfer functionality from RestaurantServlet to controllers
fix bags and make the correct output

--- a/config/messages/app_ru.properties
+++ b/config/messages/app_ru.properties
@@ -11,11 +11,18 @@ user.registered=\u0417\u0430\u0440\u0435\u0433\u0438\u0441\u0442\u0440\u0438\u04
 
 restaurant.title=\u0420\u0435\u0441\u0442\u043E\u0440\u0430\u043D\u044B
 restaurant.add=\u0414\u043E\u0431\u0430\u0432\u0438\u0442\u044C \u0440\u0435\u0441\u0442\u043E\u0440\u0430\u043D
+restaurant.edit=\u0420\u0435\u0434\u0430\u043A\u0442\u0438\u0440\u043E\u0432\u0430\u0442\u044C
 restaurant.vote=\u0413\u043E\u043B\u043E\u0441\u043E\u0432\u0430\u0442\u044C
 restaurant.voteCounter=\u0420\u0435\u0439\u0442\u0438\u043D\u0433
 restaurant.name=\u041D\u0430\u0437\u0432\u0430\u043D\u0438\u0435
 restaurant.menu=\u0411\u043B\u044E\u0434\u043E
 restaurant.price=\u0426\u0435\u043D\u0430
+restaurant.dish1=\u0411\u043B\u044E\u0434\u043E \u21161
+restaurant.price1=\u0426\u0435\u043D\u0430 \u21161
+restaurant.dish2=\u0411\u043B\u044E\u0434\u043E \u21162
+restaurant.price2=\u0426\u0435\u043D\u0430 \u21162
+restaurant.dish3=\u0411\u043B\u044E\u0434\u043E \u21163
+restaurant.price3=\u0426\u0435\u043D\u0430 \u21163
 
 
 common.select=\u0412\u044B\u0431\u0440\u0430\u0442\u044C
