--- a/config/messages/app_ru.properties
+++ b/config/messages/app_ru.properties
@@ -18,8 +18,7 @@ restaurant.edit=\u0420\u0435\u0434\u0430\u043A\u0442\u0438\u0440\u043E\u0432\u04
 restaurant.vote=\u0413\u043E\u043B\u043E\u0441\u043E\u0432\u0430\u0442\u044C
 restaurant.voteCounter=\u0420\u0435\u0439\u0442\u0438\u043D\u0433
 restaurant.name=\u041D\u0430\u0437\u0432\u0430\u043D\u0438\u0435
-restaurant.menu=\u0411\u043B\u044E\u0434\u043E
-restaurant.price=\u0426\u0435\u043D\u0430
+restaurant.menu=\u041F\u043E\u0441\u043C\u043E\u0442\u0440\u0435\u0442\u044C \u043C\u0435\u043D\u044E
 restaurant.dish1=\u0411\u043B\u044E\u0434\u043E \u21161
 restaurant.price1=\u0426\u0435\u043D\u0430 \u21161
 restaurant.dish2=\u0411\u043B\u044E\u0434\u043E \u21162
